<resources>
    <string name="app_name">Sofie</string>

    <!-- Errors -->
    <string name="ERROR_UNEXPECTED">Um erro inesperado ocorreu. Tente novamente mais tarde.</string>
    <string name="ERROR_LOAD_TASK">Erro ao carregar a tarefa.</string>
    <string name="ERROR_INTERNET_CONNECTION">Conexão à internet necessária para uso da applicação.</string>
    <string name="ERROR_CREATED">Não foi possível salvar sua tarefa. Por favor, tente novamente mais tarde.</string>
    <string name="ERROR_UPDATE">Não foi possível salvar sua tarefa. Por favor, tente novamente mais tarde.</string>
    <string name="ERROR_DELETE">Não foi possível deletar sua tarefa. Por favor, tente novamente mais tarde.</string>
    <string name="MISSING_AUTHENTICATION">Usuário não autenticado</string>

    <!--labels-->
    <string name="tasks_fragment_label">Tasks Fragment</string>
    <string name="splash_screen_activity">SplashScreen Activity</string>
    <string name="create_task_activity">Create Task Activity</string>
    <string name="tasks">Tarefas</string>
    <string name="new_task">Nova Tarefa</string>
    <string name="name_tasks">Nome da Tarefa</string>
    <string name="desc_tasks">Descrição da Tarefa</string>
    <string name="email">email</string>
    <string name="save">save</string>
    <string name="cancel">cancel</string>
    <string name="sim">Sim</string>
    <string name="cancelar">Cancelar</string>
    <string name="remocao_de_tarefa">Remoção de tarefa</string>
    <string name="remover_tarefa">Remover tarefa?</string>
    <string name="add_task_success">Tarefa adicionada com sucesso</string>
    <string name="update_task_success">Tarefa atualizada com sucesso</string>


</resources>